working but not optimal in any way

--- a/final_project/code/CMakeLists.txt
+++ b/final_project/code/CMakeLists.txt
@@ -11,6 +11,8 @@ include_directories(
     ./pybind11/include
     )
 
+add_subdirectory(pybind11)
+
 link_directories(
     /usr/local/cuda/lib64
     )
